# MEAM5170-Final-Project

./: .gitignore  .pylintrc  MANIFEST.in  README.md  control.py  hopper.urdf.xacro  myHopper_sim.py  myHopper_sim_with_keys.py  pyproject.toml  requirements.txt  setup.py  slip.py  slip_control.py  slip_torque_control.py
pympc/config/: linear_mpc_configs.py  robot_configs.py
pympc/linear_mpc/: gait.py  leg_controller.py  mpc.py  swing_foot_trajectory_generator.py
pympc/scripts/: mujoco_aliengo.py
pympc/utils/: dynamics.py  kinematics.py  robot_data.py
slip/: CMakeLists.txt  package.xml
slip/launch/: display.launch  gazebo.launch
slip/meshes/: base_link.STL  link1.STL  link2.STL  toe.STL
slip/urdf/: slip.csv  slip.urdf
slip_flat/: CMakeLists.txt  package.xml
slip_flat/launch/: display.launch  gazebo.launch
slip_flat/meshes/: base_link.STL  link1.STL  link2.STL  toe.STL
slip_flat/urdf/: slip_flat.csv  slip_flat.urdf
